# CMakeListsGen

./: CMakeLists.txt  README.md
src/: CMakeListsGen.cpp
